# claymore_JLM

./: .gitignore  CMakeLists.txt  setup_cuda.cmake
Projects/COUPLED/: CMakeLists.txt  aggregate_time_series_particleTarget[0]_dev[0].csv  constitutive_models.cuh  force_time_series_gridTarget[0]_dev[0].csv  gridTarget[0]_dev[0]_frame[-1].bgeo  gridTarget[0]_dev[0]_frame[6].bgeo  grid_buffer.cuh  grid_energy_time_series.csv  halo_buffer.cuh  mgmpm_kernels.cuh  mgsp_benchmark.cuh  particleTarget[0]_dev[0]_frame[-1].bgeo  particleTarget[0]_dev[0]_frame[5].bgeo  particle_buffer.cuh  particle_energy_time_series.csv  read_scene_input.h  scene_1DColumn_DrySoil.json  scene_1DColumn_SatSoil.json  scene_DrySoil_Column2D.json  scene_DrySoil_Column2D_001.json  scene_DrySoil_Wall2D.json  scene_SatSoil_Block_a1.json  scene_SatSoil_Colum2D.json  scene_SatSoil_Column2D.json  scene_SatSoil_Column2D_001_a0.json  scene_SatSoil_Column2D_001_a01.json  scene_SatSoil_Column2D_001_a1.json  scene_SatSoil_Wall2D.json  scene_flow_box.json  scene_flow_box_2models.json  scene_flow_gpu0.json  scene_sc3dUP_prisma.json  scene_sc3d_prisma.bgeo  scene_sc3d_prisma.json  scene_sc3d_prisma_UP.json  settings.h  track_time_series_ID[0]_dev[0].csv
Projects/FBAR/: scene_flow_box.json
docs/: benchmark.rst
